--- a/stylesheet.css
+++ b/stylesheet.css
@@ -254,10 +254,7 @@ ol li {
         text-decoration: none;
         font-size: 20px;
         display: block;
-        padding-bottom: 9px;
-        padding-left: 5px;
-        padding-right: 5px;
-        padding-top: 7px;
+        padding: 8px 5px;
         margin-top: -2px;
         text-align: center;
     }
@@ -266,11 +263,15 @@ ol li {
         color: white;
         transition: all 0.3s ease-in-out;
     }
-    a svg.icon.icon-tabler.icon-tabler-user-circle {
+    svg.icon.icon-tabler.icon-tabler-user-circle {
         filter: invert(31%) sepia(92%) saturate(5500%) hue-rotate(351deg) brightness(103%) contrast(84%);
         display: block;
         margin-left: 20px;
         margin-right: 20px;
+    }
+    svg.icon.icon-tabler.icon-tabler-user-circle:hover {
+        filter: brightness(1) invert(0);
+        transition: all 1s ease-in-out;
     }
     .user-icon svg:hover {
         filter: none;
