--- a/stylesheet.css
+++ b/stylesheet.css
@@ -397,6 +397,7 @@ ol li {
         list-style-type: none;
         padding-left: 10px;
         padding-right: 10px;
+        margin-top: 0px;
         display: flex;
         align-self: center;
         justify-content: space-between;
