--- a/stylesheet.css
+++ b/stylesheet.css
@@ -558,24 +558,28 @@ ul {
 
     /* Details */
     dl {
-        display: grid;
-        flex-direction: column;
-        justify-items: center;
-        /*padding: 10px;
+        padding: 10px;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: 100px 1fr;*/
+        grid-template-columns: 1fr;
+        flex-direction: column;
+        text-align: center;
+        width: 250px;
+    }
+    dl div {
+        display: flex;
     }
     dt {
-        display: block;
+        display: flex;
+        text-align: left;
+        width: 100px;
+        margin-right: 0px;
     }
     dd {
-        display: block;
-        flex-direction: row-reverse;
-        /*text-align: left;
+        display: inline-block;
+        text-align: left;
         margin-left: 0px;
         padding: 0px;
-        display: inline-flex;*/
     }
 
     /* ingredients and directions sections */
@@ -725,7 +729,25 @@ ul {
     .details dl {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 150px;
+    }
+    dl dt {
+        display: flex;
+        justify-content: center;
+        margin-right: 0px;
+        width: 150px;
+    }
+    dl div {
+        display: block;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    dl dd {
+        display: flex;
+        justify-content: center;
+        width: 150px;
     }
 
     /* side dishes */
